# js2c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deps.sh
example/: Makefile  fib.c  fib.h  fib.js  test.c
src/: js2c.c  js_std.c  js_std.h
